--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>An Average Day in the Life of a Programmer</h1>
     <p>Based on a True Story</p>
     <br><br>
-    <h2>You were programming on the icy expanses of Github Codespaces for your submission to the Hack Club Event. When suddenly...</h2>
+    <h2>You were programming on the icy expanses of VS Code for your submission to the Hack Club Event. When suddenly...</h2>
     <h2>Oh no!</h2>
     <h2>You were hit with a snowstorm of bugs!</h2>
     <h2>You must make it back to Hack Club HQ in time for the submission deadline, but your project is too buggy for you to submit right now!</h2>
