--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Hello, this is Explanatory Monologue Tree. Scroll down and look through the code to find the element that contains the snow.-->
 
     <h1>An Average Day in the Life of a Programmer</h1>
+    <h2>By A Random Ant</h2>
     <p>Based on a True Story</p>
     <br><br>
     <h2>You were programming on the icy expanses of VS Code for your submission to the Hack Club Event. When suddenly...</h2>
