--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>An Average Day in the Life of a Programmer</title>
+    <link rel="icon" type="image/png" href="Tree.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
