--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Oh no!</h2>
     <h2>You were hit with a snowstorm of bugs!</h2>
     <h2>You must make it back to Hack Club HQ in time for the submission deadline, but your project is too buggy for you to submit right now!</h2>
-    <h2>You must embrake on a epic quest to find the secret to fixing bugs and make it back before time runs out!</h2>
+    <h2>You must embark on an epic quest to find the secret to fixing bugs and make it back before time runs out!</h2>
     <p>Hint: Try clicking on the tree! It's how you are supposed the get the information you need to win, but I guess mind reading works as well.</p>
     <p>Note: There isn't actually a timer on this website, so the "make it back before time runs out" thing is just there for dramatic effect.</p>
     <p>Note: Also, the snow was definitively not shoehorned in to give this a winter theme. Alright, I'm going to stop talking now.</p>
