--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br><br>
     <h2>You were programming on the icy expanses of VS Code for your submission to the Hack Club Event. When suddenly...</h2>
     <h2>Oh no!</h2>
-    <h2>You were hit with a snowstorm of bugs!</h2>
+    <h2>You were hit with a snowstorm of bugs! (Don't question it)</h2>
     <h2>You must make it back to Hack Club HQ in time for the submission deadline, but your project is too buggy for you to submit right now!</h2>
     <h2>You must embark on an epic quest to find the secret to fixing bugs and make it back before time runs out!</h2>
     <p>Hint: Try clicking on the tree! It's how you are supposed the get the information you need to win, but I guess mind reading works as well.</p>
